src/test/ui/hrtb/issue-58451.stderr
error[E0061]: this function takes 1 parameter but 0 parameters were supplied
  --> $DIR/issue-58451.rs:12:9
   |
LL | / fn f<I>(i: I)
LL | | where
LL | |     I: IntoIterator,
LL | |     I::Item: for<'a> Into<&'a ()>,
LL | | {}
   | |__- defined here
...
LL |       f(&[f()]);
   |           ^^^ expected 1 parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
